# diploma2020

./: .gitignore  CMakeLists.txt  Makefile  input.cpp  input.h  main.cpp  proof.cpp  proof.h  solver.cpp  solver.h  utils.cpp
.github/workflows/: sonar-project.properties  sonar.yml
